Started testing out models

--- a/TestingModels.ipynb
+++ b/TestingModels.ipynb
@@ -207,7 +207,7 @@
     "plt.show()\n",
     "\n",
     "print(f'Accuracy: {accuracy_score(y, preds)}')\n",
-    "print(f'Precision: {precision_score(y,preds)}')"
+    "print(f'Precision: {precision_score(y,preds)}')\n"
    ]
   },
   {
