--- a/TestingModels.ipynb
+++ b/TestingModels.ipynb
@@ -320,6 +320,183 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_importances = pd.DataFrame(zip(clf.named_steps[\"Poly\"].get_feature_names_out(),\n",
+    "                 clf.named_steps[\"regression\"].coef_.flatten(),\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'CryoSleep',\n",
+       " 1: 'Age',\n",
+       " 2: 'VIP',\n",
+       " 3: 'RoomService',\n",
+       " 4: 'FoodCourt',\n",
+       " 5: 'ShoppingMall',\n",
+       " 6: 'Spa',\n",
+       " 7: 'VRDeck',\n",
+       " 8: 'GroupID',\n",
+       " 9: 'PartySize',\n",
+       " 10: 'Deck',\n",
+       " 11: 'Side',\n",
+       " 12: 'Road'}"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_names_dict = dict(zip(list(range(len(X.columns.values))), X.columns.values))\n",
+    "col_names_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>504</th>\n",
+       "      <td>VRDeck^3</td>\n",
+       "      <td>-1.992794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>525</th>\n",
+       "      <td>GroupID^3</td>\n",
+       "      <td>-1.816933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>Spa^3</td>\n",
+       "      <td>-1.768874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Deck^2</td>\n",
+       "      <td>-1.667826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559</th>\n",
+       "      <td>Road^3</td>\n",
+       "      <td>-1.383464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>CryoSleep Deck Road</td>\n",
+       "      <td>1.354376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>ShoppingMall^3</td>\n",
+       "      <td>1.364141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>GroupID^2</td>\n",
+       "      <td>1.564782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>528</th>\n",
+       "      <td>GroupID^2 Side</td>\n",
+       "      <td>1.659715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>FoodCourt^3</td>\n",
+       "      <td>2.352160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>560 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       0         1\n",
+       "504             VRDeck^3 -1.992794\n",
+       "525            GroupID^3 -1.816933\n",
+       "476                Spa^3 -1.768874\n",
+       "99                Deck^2 -1.667826\n",
+       "559               Road^3 -1.383464\n",
+       "..                   ...       ...\n",
+       "192  CryoSleep Deck Road  1.354376\n",
+       "440       ShoppingMall^3  1.364141\n",
+       "90             GroupID^2  1.564782\n",
+       "528       GroupID^2 Side  1.659715\n",
+       "395          FoodCourt^3  2.352160\n",
+       "\n",
+       "[560 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_importances.sort_values(by=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Increasing the polynomial degree has caused an explosion in number of features. To adress this we'll add some regularization to drop the features that are murking the model's prediction power."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regularization"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
